--- a/Express-Backend/package.json
+++ b/Express-Backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.12.1",
+    "morgan": "^1.10.0",
     "validator": "^13.12.0"
   }
 }
