--- a/React-Frontend/package.json
+++ b/React-Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-frontend",
+  "name": "game-vault",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.10.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -28,7 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.4.0",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.475.0",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
