--- a/Express-Backend/package.json
+++ b/Express-Backend/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.13.0",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "validator": "^13.12.0"
   }
 }
