--- a/Express-Backend/package.json
+++ b/Express-Backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
+    "uuid": "^11.1.0",
     "validator": "^13.12.0"
   }
 }
