--- a/React-Frontend/package.json
+++ b/React-Frontend/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.3",
@@ -40,6 +40,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
     "react-top-loading-bar": "^3.0.2",
