--- a/Express-Backend/package.json
+++ b/Express-Backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,6 +25,7 @@
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
+    "serverless-http": "^3.2.0",
     "uuid": "^11.1.0",
     "validator": "^13.12.0"
   }
